# OpenCV

Active Shape Model/ASM Library/src/demo/: CMakeLists.txt
Camera/Calibration/: camera_calibration.cpp
VERSIONS/: HOW TO COMPILE.txt
VERSIONS/3.0.0ms/include/opencv2/: cvconfig.h
VERSIONS/3.0.0ms/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
VERSIONS/Choose version/: Makefile  showVersion
